Fix spacing with search results on mobile

--- a/2019/css/style.scss
+++ b/2019/css/style.scss
@@ -313,7 +313,7 @@ $screen-edge-spacing: 40px;
 
 .search-results {
     position: fixed;
-    top: 18.5em;
+    top: 22em;
     padding-left: 20px;
     padding-right: 20px;
     height: 0px;
